fixed horizontal scrolling

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,6 +24,7 @@ html {
     color: $white;
     background-color: $black;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body, h1, h2, h3, ul, p {
